test/SemanticAnalysis/Inherit/InheritTwoMethodsTwoClasses.loci
// RUN: %locic %s --verify > %t
// RUN: FileCheck < %t %s

class ParentA() {
	void methodA() { }
}

class ParentB() {
	void methodB() { }
}

// CHECK: .loci:14:13: error: inheritance not currently implemented
// CHECK: .loci:14:38: error: inheritance not currently implemented
class Child(inherit ParentA parentA, inherit ParentB parentB) { }

void function(Child& child) {
	child.methodA();
	child.methodB();
}

// CHECK: 2 errors generated.
